// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenshiftView Component should have a fallback title: title 1`] = `
<PageLayout>
  <PageHeader
    includeTour={true}
    productLabel="test label"
    t={[Function]}
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"test label"})
  </PageHeader>
  <PageMessages
    className=""
  >
    <Connect(BannerMessages)
      productId="lorem ipsum"
      query={
        Object {
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageMessages>
  <PageToolbar
    className=""
  >
    <Connect(Toolbar)
      filterOptions={
        Array [
          Object {
            "id": "sla",
          },
        ]
      }
      productId="lorem ipsum"
      query={
        Object {
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageToolbar>
  <PageSection
    className=""
  >
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading, {\\"context\\":\\"cores\\"})"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "cores",
            "isOptional": true,
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
            "isOptional": true,
          },
        ]
      }
      key="graph_lorem ipsum"
      productId="lorem ipsum"
      productLabel="test label"
      query={
        Object {
          "beginning": "2019-06-20T00:00:00.000Z",
          "ending": "2019-07-20T23:59:59.999Z",
          "granularity": "daily",
        }
      }
      viewId="viewOpenShift"
    >
      <ToolbarFieldUom
        options={
          Array [
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.uom, {\\"context\\":\\"cores\\"})",
              "value": "cores",
            },
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.uom, {\\"context\\":\\"sockets\\"})",
              "value": "sockets",
            },
          ]
        }
        t={[Function]}
        value="cores"
        viewId="viewOpenShift"
      />
      <ToolbarFieldGranularity
        options={
          Array [
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"daily\\"})",
              "value": "daily",
            },
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"weekly\\"})",
              "value": "weekly",
            },
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"monthly\\"})",
              "value": "monthly",
            },
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"quarterly\\"})",
              "value": "quarterly",
            },
          ]
        }
        t={[Function]}
        value="daily"
        viewId="viewOpenShift"
      />
    </Connect(GraphCard)>
  </PageSection>
  <PageSection
    className=""
  >
    <Connect(InventoryTabs)
      key="inventory_lorem ipsum"
      productId="lorem ipsum"
    >
      <InventoryTab
        active={false}
        key="inventory_hosts_lorem ipsum"
        title="t(curiosity-inventory.tab, {\\"context\\":\\"hosts\\"})"
      >
        <Connect(InventoryList)
          filterGuestsData={
            Array [
              Object {
                "cell": [Function],
                "header": "t(curiosity-inventory.header, {\\"context\\":\\"guestsDisplayName\\"})",
                "id": "displayName",
              },
              Object {
                "cellWidth": 40,
                "id": "inventoryId",
              },
              Object {
                "cell": [Function],
                "cellWidth": 15,
                "id": "lastSeen",
              },
            ]
          }
          filterInventoryData={
            Array [
              Object {
                "cell": [Function],
                "id": "displayName",
                "isSortable": true,
              },
              Object {
                "cell": [Function],
                "cellWidth": 20,
                "id": "measurementType",
                "isSortable": true,
              },
              Object {
                "cellWidth": 15,
                "id": "cores",
                "isOptional": true,
                "isSortable": true,
                "isWrappable": true,
              },
              Object {
                "cell": [Function],
                "cellWidth": 15,
                "id": "lastSeen",
                "isSortable": true,
                "isWrappable": true,
              },
            ]
          }
          key="lorem ipsum"
          productId="lorem ipsum"
          query={
            Object {
              "dir": "asc",
              "limit": 100,
              "offset": 0,
              "sort": "last_seen",
              "uom": "cores",
            }
          }
          settings={Object {}}
          viewId="viewOpenShift"
        />
      </InventoryTab>
      <InventoryTab
        active={false}
        key="inventory_subs_lorem ipsum"
        title="t(curiosity-inventory.tab, {\\"context\\":\\"subscriptions\\"})"
      >
        <Connect(InventorySubscriptions)
          filterInventoryData={
            Array [
              Object {
                "id": "productName",
                "isSortable": true,
              },
              Object {
                "cellWidth": 15,
                "id": "serviceLevel",
                "isSortable": true,
                "isWrappable": true,
              },
              Object {
                "cell": [Function],
                "cellWidth": 15,
                "id": "upcomingEventDate",
                "isSortable": true,
                "isWrappable": true,
              },
            ]
          }
          key="lorem ipsum"
          productId="lorem ipsum"
          query={
            Object {
              "dir": "asc",
              "limit": 100,
              "offset": 0,
              "sort": "upcoming_event_date",
              "uom": "cores",
            }
          }
          viewId="viewOpenShift"
        />
      </InventoryTab>
    </Connect(InventoryTabs)>
  </PageSection>
</PageLayout>
`;

exports[`OpenshiftView Component should have default props that set product configuration: filteredGuestsData results 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem",
    },
    Object {
      "title": "lorem inventory id",
    },
    Object {
      "title": <DateFormat
        date="lorem date obj"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"guestsDisplayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": "lorem date obj",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
    "subscriptionManagerId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"subscriptionManagerId\\"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`OpenshiftView Component should have default props that set product configuration: filteredGuestsData results, authorized 1`] = `
Object {
  "cells": Array [
    Object {
      "title": <Button
        component="a"
        href="/insights/inventory/lorem inventory id/"
        isInline={true}
        target="_blank"
        variant="link"
      >
        lorem
      </Button>,
    },
    Object {
      "title": "lorem inventory id",
    },
    Object {
      "title": <DateFormat
        date="lorem date obj"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"guestsDisplayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": "lorem date obj",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
    "subscriptionManagerId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"subscriptionManagerId\\"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`OpenshiftView Component should have default props that set product configuration: filteredInventoryData results 1`] = `
Object {
  "cells": Array [
    Object {
      "title": <React.Fragment>
        lorem
         
        t(curiosity-inventory.label, {"context":"numberOfGuests","count":3}, [object Object])
      </React.Fragment>,
    },
    Object {
      "title": <React.Fragment>
        t(curiosity-inventory.measurementType, {"context":null})
         
        
      </React.Fragment>,
    },
    Object {
      "title": 10,
    },
    Object {
      "title": 12,
    },
    Object {
      "title": <DateFormat
        date="lorem date obj"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"measurementType\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "cores": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores\\"})",
      "value": 12,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "hardwareType": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"hardwareType\\"})",
      "value": "ipsum",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": "lorem date obj",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
    "measurementType": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"measurementType\\"})",
      "value": null,
    },
    "numberOfGuests": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
      "value": 3,
    },
    "sockets": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets\\"})",
      "value": 10,
    },
  },
}
`;

exports[`OpenshiftView Component should have default props that set product configuration: filteredInventoryData results, authorized 1`] = `
Object {
  "cells": Array [
    Object {
      "title": <React.Fragment>
        <Button
          component="a"
          href="/insights/inventory/lorem inventory id/"
          isInline={true}
          target="_blank"
          variant="link"
        >
          lorem
        </Button>
         
        t(curiosity-inventory.label, {"context":"numberOfGuests","count":3}, [object Object])
      </React.Fragment>,
    },
    Object {
      "title": <React.Fragment>
        t(curiosity-inventory.measurementType, {"context":null})
         
        
      </React.Fragment>,
    },
    Object {
      "title": 10,
    },
    Object {
      "title": 12,
    },
    Object {
      "title": <DateFormat
        date="lorem date obj"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"measurementType\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "cores": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores\\"})",
      "value": 12,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "hardwareType": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"hardwareType\\"})",
      "value": "ipsum",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": "lorem date obj",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
    "measurementType": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"measurementType\\"})",
      "value": null,
    },
    "numberOfGuests": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
      "value": 3,
    },
    "sockets": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets\\"})",
      "value": 10,
    },
  },
}
`;

exports[`OpenshiftView Component should have default props that set product configuration: initial configuration 1`] = `
Object {
  "initialGraphFilters": Array [
    Object {
      "color": "#06c",
      "fill": "#8bc1f7",
      "id": "cores",
      "isOptional": true,
      "stroke": "#06c",
    },
    Object {
      "color": "#06c",
      "fill": "#8bc1f7",
      "id": "sockets",
      "isOptional": true,
      "stroke": "#06c",
    },
    Object {
      "id": "thresholdSockets",
      "isOptional": true,
    },
    Object {
      "id": "thresholdCores",
      "isOptional": true,
    },
  ],
  "initialGuestsFilters": Array [
    Object {
      "cell": [Function],
      "header": "t(curiosity-inventory.header, {\\"context\\":\\"guestsDisplayName\\"})",
      "id": "displayName",
    },
    Object {
      "cellWidth": 40,
      "id": "inventoryId",
    },
    Object {
      "cell": [Function],
      "cellWidth": 15,
      "id": "lastSeen",
    },
  ],
  "initialInventoryFilters": Array [
    Object {
      "cell": [Function],
      "id": "displayName",
      "isSortable": true,
    },
    Object {
      "cell": [Function],
      "cellWidth": 20,
      "id": "measurementType",
      "isSortable": true,
    },
    Object {
      "cellWidth": 15,
      "id": "sockets",
      "isOptional": true,
      "isSortable": true,
      "isWrappable": true,
    },
    Object {
      "cellWidth": 15,
      "id": "cores",
      "isOptional": true,
      "isSortable": true,
      "isWrappable": true,
    },
    Object {
      "cell": [Function],
      "cellWidth": 15,
      "id": "lastSeen",
      "isSortable": true,
      "isWrappable": true,
    },
  ],
  "query": Object {
    "uom": "cores",
  },
}
`;

exports[`OpenshiftView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader
    includeTour={true}
    productLabel="test label"
    t={[Function]}
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"test label"})
  </PageHeader>
  <PageMessages
    className=""
  >
    <Connect(BannerMessages)
      productId="lorem ipsum"
      query={
        Object {
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageMessages>
  <PageToolbar
    className=""
  >
    <Connect(Toolbar)
      filterOptions={
        Array [
          Object {
            "id": "sla",
          },
        ]
      }
      productId="lorem ipsum"
      query={
        Object {
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageToolbar>
  <PageSection
    className=""
  >
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading, {\\"context\\":\\"cores\\"})"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "cores",
            "isOptional": true,
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
            "isOptional": true,
          },
        ]
      }
      key="graph_lorem ipsum"
      productId="lorem ipsum"
      productLabel="test label"
      query={
        Object {
          "beginning": "2019-06-20T00:00:00.000Z",
          "ending": "2019-07-20T23:59:59.999Z",
          "granularity": "daily",
        }
      }
      viewId="viewOpenShift"
    >
      <ToolbarFieldUom
        options={
          Array [
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.uom, {\\"context\\":\\"cores\\"})",
              "value": "cores",
            },
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.uom, {\\"context\\":\\"sockets\\"})",
              "value": "sockets",
            },
          ]
        }
        t={[Function]}
        value="cores"
        viewId="viewOpenShift"
      />
      <ToolbarFieldGranularity
        options={
          Array [
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"daily\\"})",
              "value": "daily",
            },
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"weekly\\"})",
              "value": "weekly",
            },
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"monthly\\"})",
              "value": "monthly",
            },
            Object {
              "selected": false,
              "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"quarterly\\"})",
              "value": "quarterly",
            },
          ]
        }
        t={[Function]}
        value="daily"
        viewId="viewOpenShift"
      />
    </Connect(GraphCard)>
  </PageSection>
  <PageSection
    className=""
  >
    <Connect(InventoryTabs)
      key="inventory_lorem ipsum"
      productId="lorem ipsum"
    >
      <InventoryTab
        active={false}
        key="inventory_hosts_lorem ipsum"
        title="t(curiosity-inventory.tab, {\\"context\\":\\"hosts\\"})"
      >
        <Connect(InventoryList)
          filterGuestsData={
            Array [
              Object {
                "cell": [Function],
                "header": "t(curiosity-inventory.header, {\\"context\\":\\"guestsDisplayName\\"})",
                "id": "displayName",
              },
              Object {
                "cellWidth": 40,
                "id": "inventoryId",
              },
              Object {
                "cell": [Function],
                "cellWidth": 15,
                "id": "lastSeen",
              },
            ]
          }
          filterInventoryData={
            Array [
              Object {
                "cell": [Function],
                "id": "displayName",
                "isSortable": true,
              },
              Object {
                "cell": [Function],
                "cellWidth": 20,
                "id": "measurementType",
                "isSortable": true,
              },
              Object {
                "cellWidth": 15,
                "id": "cores",
                "isOptional": true,
                "isSortable": true,
                "isWrappable": true,
              },
              Object {
                "cell": [Function],
                "cellWidth": 15,
                "id": "lastSeen",
                "isSortable": true,
                "isWrappable": true,
              },
            ]
          }
          key="lorem ipsum"
          productId="lorem ipsum"
          query={
            Object {
              "dir": "asc",
              "limit": 100,
              "offset": 0,
              "sort": "last_seen",
              "uom": "cores",
            }
          }
          settings={Object {}}
          viewId="viewOpenShift"
        />
      </InventoryTab>
      <InventoryTab
        active={false}
        key="inventory_subs_lorem ipsum"
        title="t(curiosity-inventory.tab, {\\"context\\":\\"subscriptions\\"})"
      >
        <Connect(InventorySubscriptions)
          filterInventoryData={
            Array [
              Object {
                "id": "productName",
                "isSortable": true,
              },
              Object {
                "cellWidth": 15,
                "id": "serviceLevel",
                "isSortable": true,
                "isWrappable": true,
              },
              Object {
                "cell": [Function],
                "cellWidth": 15,
                "id": "upcomingEventDate",
                "isSortable": true,
                "isWrappable": true,
              },
            ]
          }
          key="lorem ipsum"
          productId="lorem ipsum"
          query={
            Object {
              "dir": "asc",
              "limit": 100,
              "offset": 0,
              "sort": "upcoming_event_date",
              "uom": "cores",
            }
          }
          viewId="viewOpenShift"
        />
      </InventoryTab>
    </Connect(InventoryTabs)>
  </PageSection>
</PageLayout>
`;
